automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -429,13 +429,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = None"
+    "unique_countries = set(countries)"
    ]
   },
   {
